feat: implement favs and change doc api
